Enable unnamed module to up sun.awt lib in unit tests